k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: ocp-cicd-appli-ui
  name: ocp-cicd-appli-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: ocp-cicd-appli-ui
    weight: 100
